chore: update eslintignore

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proper-url-join",
-  "description": "Like `path.join` but for a URL.",
+  "description": "Like `path.join` but for a URL",
   "version": "1.0.0",
   "keywords": [
     "url",
