--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,3 @@
 {
-    "presets": ["moxy"],
-    "env": {
-        "commonjs": {
-            "plugins": ["add-module-exports"]
-        },
-    }
+    "presets": ["moxy"]
 }
