--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "jest": "^22.0.0",
     "lint-staged": "^6.0.0",
     "standard-version": "^4.2.0"
+  },
+  "dependencies": {
+    "query-string": "^5.0.1"
   }
 }
