--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "lint": "eslint .",
     "test": "jest --env node --coverage",
     "prerelease": "npm t && npm run lint && npm run build",
-    "release": "standard-version",
-    "precommit": "lint-staged",
-    "commitmsg": "commitlint -e $GIT_PARAMS"
+    "release": "standard-version"
   },
   "standard-version": {
     "scripts": {
@@ -50,12 +48,18 @@
     "babel-preset-moxy": "^2.3.5",
     "eslint": "^5.0.0",
     "eslint-config-moxy": "^6.0.0",
-    "husky": "^0.14.3",
+    "husky": "^1.1.2",
     "jest": "^23.0.0",
     "lint-staged": "^7.0.0",
     "standard-version": "^4.2.0"
   },
   "dependencies": {
     "query-string": "^5.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
   }
 }
