--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "standard-version": {
     "scripts": {
-      "posttag": "git push --follow-tags origin master && npm publish"
+      "posttag": "git push --follow-tags origin master"
     }
   },
   "lint-staged": {
