--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "jest --env node --coverage",
     "prerelease": "npm t && npm run lint && npm run build",
     "release": "standard-version",
-    "postrelease": "git push --follow-tags origin master && npm publish"
+    "postrelease": "git push --follow-tags origin HEAD && npm publish"
   },
   "lint-staged": {
     "*.js": [
